--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "test/vendor/googletest"]
 	path = test/vendor/googletest
 	url = https://github.com/google/googletest.git
+[submodule "bench/vendor/benchmark"]
+	path = bench/vendor/benchmark
+	url = https://github.com/google/benchmark.git
